<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VFR Map</string>
    <string name="data_height">Altitude:</string>
    <string name="data_speed">Speed (ground):</string>
    <string name="data_heading">Heading (mag):</string>
    <string name="data_heading_gps">Heading (GPS):</string>
    <string name="data_accuracy">Accuracy (GPS):</string>
    <string name="format_old_gps">Old GPS data! (Age: %s)</string>
    <string name="format_height_m">%.0f m</string>
    <string name="format_height_ft">%.0f ft</string>
    <string name="format_speed_kph">%.0f km/h</string>
    <string name="format_speed_kn">%.0f kn</string>
    <string name="format_speed_ms">%.0f m/s</string>
    <string name="format_heading">%.0f °</string>
    <string name="format_accuracy">%.0f m</string>
    <string name="age_seconds">s</string>
    <string name="age_minutes">min</string>
    <string name="age_hours">h</string>
    <string name="age_days">d</string>
    <string name="menu_center">My position</string>
    <string name="menu_zoom_in">Zoom in</string>
    <string name="menu_zoom_out">Zoom out</string>
    <string name="settings_activity_label">VFR Map Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_units_category_title">Units</string>
    <string name="settings_units_altitude_title">Altitude unit</string>
    <string name="settings_units_altitude_default">ft</string>
    <string name="settings_units_altitude_entries_ft">Feet</string>
    <string name="settings_units_altitude_entries_m">Meter</string>
    <string name="settings_units_speed_title">Speed unit</string>
    <string name="settings_units_speed_default">kph</string>
    <string name="settings_units_speed_entries_kph">km/h</string>
    <string name="settings_units_speed_entries_kn">Knots</string>
    <string name="settings_units_speed_entries_ms">m/s</string>
    <string name="settings_display_category_title">Display settings</string>
    <string name="settings_display_gpsheading_title">Use GPS heading</string>
    <string name="settings_display_gpsheading_on">Use GPS heading instead of compass heading above a certain speed.</string>
    <string name="settings_display_gpsheading_off">Always use compass heading.</string>
    <string name="settings_misc_category_title">Other settings</string>
    <string name="settings_misc_update_title">Check for update...</string>
    <string name="update_dialog_check">Checking for updates...</string>
    <string name="update_dialog_error">Error while checking for update! Please try again.</string>
    <string name="update_dialog_current">You have the current version.</string>
    <string name="update_dialog_available_format">There is an update available:\n\nYour version: %1$s\nUpdate version: %2$s\n\nDownload and install update?</string>
    <string name="update_dialog_error_download">Error while downloading update! Please try again.</string>
</resources>
